--- a/Drone-Toi.ioc
+++ b/Drone-Toi.ioc
@@ -365,8 +365,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=stm32-project.ioc
-ProjectManager.ProjectName=stm32-project
+ProjectManager.ProjectFileName=Drone-Toi.ioc
+ProjectManager.ProjectName=Drone-Toi
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
