--- a/Drone-Toi.ioc
+++ b/Drone-Toi.ioc
@@ -11,21 +11,24 @@ ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-CORTEX_M7.ART_ACCELERATOR_ENABLE=1
-CORTEX_M7.CPU_DCache=Enabled
-CORTEX_M7.CPU_ICache=Enabled
+CORTEX_M7.ART_ACCELERATOR_ENABLE=0
+CORTEX_M7.CPU_DCache=Disabled
+CORTEX_M7.CPU_ICache=Disabled
 CORTEX_M7.IPParameters=ART_ACCELERATOR_ENABLE,PREFETCH_ENABLE,CPU_ICache,CPU_DCache
-CORTEX_M7.PREFETCH_ENABLE=1
+CORTEX_M7.PREFETCH_ENABLE=0
 Dma.ADC1.3.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC1.3.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.ADC1.3.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
 Dma.ADC1.3.Instance=DMA2_Stream0
+Dma.ADC1.3.MemBurst=DMA_MBURST_SINGLE
 Dma.ADC1.3.MemDataAlignment=DMA_MDATAALIGN_WORD
 Dma.ADC1.3.MemInc=DMA_MINC_ENABLE
 Dma.ADC1.3.Mode=DMA_CIRCULAR
+Dma.ADC1.3.PeriphBurst=DMA_PBURST_SINGLE
 Dma.ADC1.3.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.ADC1.3.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC1.3.Priority=DMA_PRIORITY_LOW
-Dma.ADC1.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.ADC1.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 Dma.I2C1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
 Dma.I2C1_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.I2C1_RX.1.Instance=DMA1_Stream0
@@ -38,7 +41,7 @@ Dma.I2C1_RX.1.Priority=DMA_PRIORITY_LOW
 Dma.I2C1_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.I2C1_TX.2.Direction=DMA_MEMORY_TO_PERIPH
 Dma.I2C1_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.I2C1_TX.2.Instance=DMA1_Stream6
+Dma.I2C1_TX.2.Instance=DMA1_Stream7
 Dma.I2C1_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.I2C1_TX.2.MemInc=DMA_MINC_ENABLE
 Dma.I2C1_TX.2.Mode=DMA_NORMAL
@@ -50,7 +53,10 @@ Dma.Request0=USART1_RX
 Dma.Request1=I2C1_RX
 Dma.Request2=I2C1_TX
 Dma.Request3=ADC1
-Dma.RequestsNb=4
+Dma.Request4=USART2_RX
+Dma.Request5=USART2_TX
+Dma.Request6=USART3_TX
+Dma.RequestsNb=7
 Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART1_RX.0.Instance=DMA2_Stream2
@@ -61,12 +67,43 @@ Dma.USART1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART1_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.USART1_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.USART1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART2_RX.4.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART2_RX.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART2_RX.4.Instance=DMA1_Stream5
+Dma.USART2_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_RX.4.MemInc=DMA_MINC_ENABLE
+Dma.USART2_RX.4.Mode=DMA_NORMAL
+Dma.USART2_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_RX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_RX.4.Priority=DMA_PRIORITY_LOW
+Dma.USART2_RX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART2_TX.5.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART2_TX.5.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART2_TX.5.Instance=DMA1_Stream6
+Dma.USART2_TX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_TX.5.MemInc=DMA_MINC_ENABLE
+Dma.USART2_TX.5.Mode=DMA_NORMAL
+Dma.USART2_TX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_TX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_TX.5.Priority=DMA_PRIORITY_LOW
+Dma.USART2_TX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART3_TX.6.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART3_TX.6.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART3_TX.6.Instance=DMA1_Stream3
+Dma.USART3_TX.6.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_TX.6.MemInc=DMA_MINC_ENABLE
+Dma.USART3_TX.6.Mode=DMA_NORMAL
+Dma.USART3_TX.6.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_TX.6.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_TX.6.Priority=DMA_PRIORITY_LOW
+Dma.USART3_TX.6.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 ETH.IPParameters=MediaInterface,PHY_Name,PHY_Value,PhyAddress
 ETH.MediaInterface=HAL_ETH_RMII_MODE
 ETH.PHY_Name=LAN8742A_PHY_ADDRESS
 ETH.PHY_Value=0
 ETH.PhyAddress=0
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 I2C1.I2C_Speed_Mode=I2C_Fast
 I2C1.IPParameters=Timing,I2C_Speed_Mode
 I2C1.Timing=0x6000030D
@@ -82,8 +119,9 @@ Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M7
 Mcu.IP10=TIM3
 Mcu.IP11=USART1
-Mcu.IP12=USART3
-Mcu.IP13=USB_OTG_FS
+Mcu.IP12=USART2
+Mcu.IP13=USART3
+Mcu.IP14=USB_OTG_FS
 Mcu.IP2=DMA
 Mcu.IP3=ETH
 Mcu.IP4=I2C1
@@ -92,7 +130,7 @@ Mcu.IP6=I2C4
 Mcu.IP7=NVIC
 Mcu.IP8=RCC
 Mcu.IP9=SYS
-Mcu.IPNb=14
+Mcu.IPNb=15
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -123,22 +161,23 @@ Mcu.Pin30=PA11
 Mcu.Pin31=PA12
 Mcu.Pin32=PA13
 Mcu.Pin33=PA14
-Mcu.Pin34=PG11
-Mcu.Pin35=PG13
-Mcu.Pin36=PB3
-Mcu.Pin37=PB6
-Mcu.Pin38=PB7
-Mcu.Pin39=PB8
+Mcu.Pin34=PD5
+Mcu.Pin35=PG11
+Mcu.Pin36=PG13
+Mcu.Pin37=PB3
+Mcu.Pin38=PB6
+Mcu.Pin39=PB7
 Mcu.Pin4=PF1
-Mcu.Pin40=PB9
-Mcu.Pin41=VP_SYS_VS_Systick
-Mcu.Pin42=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin40=PB8
+Mcu.Pin41=PB9
+Mcu.Pin42=VP_SYS_VS_Systick
+Mcu.Pin43=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin5=PH0/OSC_IN
 Mcu.Pin6=PH1/OSC_OUT
 Mcu.Pin7=PC1
 Mcu.Pin8=PA1
 Mcu.Pin9=PA2
-Mcu.PinsNb=43
+Mcu.PinsNb=44
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -146,7 +185,10 @@ MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream2_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -158,6 +200,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
+NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=RMII_REF_CLK [LAN8742A-CZ-TR_REFCLK0]
@@ -215,8 +258,9 @@ PA9.GPIO_Label=USB_VBUS
 PA9.Locked=true
 PA9.Mode=Activate_VBUS
 PA9.Signal=USB_OTG_FS_VBUS
-PB0.GPIOParameters=GPIO_Label
+PB0.GPIOParameters=GPIO_Speed,GPIO_Label
 PB0.GPIO_Label=LD1 [Green]
+PB0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB0.Locked=true
 PB0.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Speed,GPIO_Label
@@ -228,8 +272,9 @@ PB13.GPIO_Label=RMII_TXD1 [LAN8742A-CZ-TR_TXD1]
 PB13.Locked=true
 PB13.Mode=RMII
 PB13.Signal=ETH_TXD1
-PB14.GPIOParameters=GPIO_Label
+PB14.GPIOParameters=GPIO_Speed,GPIO_Label
 PB14.GPIO_Label=LD3 [Red]
+PB14.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB14.Locked=true
 PB14.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
@@ -240,18 +285,19 @@ PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=RADIO_RX
 PB6.Mode=Half_duplex(single_wire_mode)
 PB6.Signal=USART1_TX
-PB7.GPIOParameters=GPIO_Label
+PB7.GPIOParameters=GPIO_Speed,GPIO_Label
 PB7.GPIO_Label=LD2 [Blue]
+PB7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB7.Locked=true
 PB7.Signal=GPIO_Output
 PB8.GPIOParameters=GPIO_Label,GPIO_Pu
 PB8.GPIO_Label=IMU_SCL
-PB8.GPIO_Pu=GPIO_PULLUP
+PB8.GPIO_Pu=GPIO_NOPULL
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
 PB9.GPIOParameters=GPIO_Label,GPIO_Pu
 PB9.GPIO_Label=IMU_SDA
-PB9.GPIO_Pu=GPIO_PULLUP
+PB9.GPIO_Pu=GPIO_NOPULL
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
 PC1.GPIOParameters=GPIO_Label
@@ -287,6 +333,10 @@ PC8.GPIOParameters=GPIO_Speed,GPIO_Label
 PC8.GPIO_Label=MOTOR_4_RL
 PC8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC8.Signal=S_TIM3_CH3
+PD5.GPIOParameters=GPIO_Label
+PD5.GPIO_Label=RADIO_Telemetry
+PD5.Mode=Half_duplex(single_wire_mode)
+PD5.Signal=USART2_TX
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
 PD8.Locked=true
@@ -299,12 +349,12 @@ PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
 PF0.GPIOParameters=GPIO_Label,GPIO_Pu
 PF0.GPIO_Label=ALT_SDA
-PF0.GPIO_Pu=GPIO_PULLUP
+PF0.GPIO_Pu=GPIO_NOPULL
 PF0.Mode=I2C
 PF0.Signal=I2C2_SDA
 PF1.GPIOParameters=GPIO_Label,GPIO_Pu
 PF1.GPIO_Label=ALT_SCL
-PF1.GPIO_Pu=GPIO_PULLUP
+PF1.GPIO_Pu=GPIO_NOPULL
 PF1.Mode=I2C
 PF1.Signal=I2C2_SCL
 PF14.GPIOParameters=GPIO_Label,GPIO_Pu
@@ -375,7 +425,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_I2C4_Init-I2C4-false-HAL-true,11-MX_TIM3_Init-TIM3-false-HAL-true,12-MX_ADC1_Init-ADC1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_I2C4_Init-I2C4-false-HAL-true,11-MX_TIM3_Init-TIM3-false-HAL-true,12-MX_ADC1_Init-ADC1-false-HAL-true,13-MX_USART2_UART_Init-USART2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -494,7 +544,10 @@ TIM3.Pulse-PWM\ Generation4\ CH4=1000
 USART1.IPParameters=VirtualMode-Half_duplex(single_wire_mode),Mode
 USART1.Mode=MODE_RX
 USART1.VirtualMode-Half_duplex(single_wire_mode)=VM_ASYNC
-USART3.IPParameters=VirtualMode-Asynchronous
+USART2.IPParameters=VirtualMode-Half_duplex(single_wire_mode)
+USART2.VirtualMode-Half_duplex(single_wire_mode)=VM_ASYNC
+USART3.BaudRate=1500000
+USART3.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
