--- a/Drone-Toi.ioc
+++ b/Drone-Toi.ioc
@@ -13,9 +13,9 @@ CAD.pinconfig=
 CAD.provider=
 CORTEX_M7.ART_ACCELERATOR_ENABLE=0
 CORTEX_M7.CPU_DCache=Disabled
-CORTEX_M7.CPU_ICache=Disabled
+CORTEX_M7.CPU_ICache=Enabled
 CORTEX_M7.IPParameters=ART_ACCELERATOR_ENABLE,PREFETCH_ENABLE,CPU_ICache,CPU_DCache
-CORTEX_M7.PREFETCH_ENABLE=0
+CORTEX_M7.PREFETCH_ENABLE=1
 Dma.ADC1.3.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.3.FIFOMode=DMA_FIFOMODE_ENABLE
 Dma.ADC1.3.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
@@ -56,7 +56,9 @@ Dma.Request3=ADC1
 Dma.Request4=USART2_RX
 Dma.Request5=USART2_TX
 Dma.Request6=USART3_TX
-Dma.RequestsNb=7
+Dma.Request7=USART6_RX
+Dma.Request8=USART6_TX
+Dma.RequestsNb=9
 Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART1_RX.0.Instance=DMA2_Stream2
@@ -97,6 +99,26 @@ Dma.USART3_TX.6.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART3_TX.6.PeriphInc=DMA_PINC_DISABLE
 Dma.USART3_TX.6.Priority=DMA_PRIORITY_LOW
 Dma.USART3_TX.6.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART6_RX.7.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART6_RX.7.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART6_RX.7.Instance=DMA2_Stream1
+Dma.USART6_RX.7.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART6_RX.7.MemInc=DMA_MINC_ENABLE
+Dma.USART6_RX.7.Mode=DMA_NORMAL
+Dma.USART6_RX.7.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART6_RX.7.PeriphInc=DMA_PINC_DISABLE
+Dma.USART6_RX.7.Priority=DMA_PRIORITY_LOW
+Dma.USART6_RX.7.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART6_TX.8.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART6_TX.8.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART6_TX.8.Instance=DMA2_Stream6
+Dma.USART6_TX.8.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART6_TX.8.MemInc=DMA_MINC_ENABLE
+Dma.USART6_TX.8.Mode=DMA_NORMAL
+Dma.USART6_TX.8.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART6_TX.8.PeriphInc=DMA_PINC_DISABLE
+Dma.USART6_TX.8.Priority=DMA_PRIORITY_LOW
+Dma.USART6_TX.8.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 ETH.IPParameters=MediaInterface,PHY_Name,PHY_Value,PhyAddress
 ETH.MediaInterface=HAL_ETH_RMII_MODE
 ETH.PHY_Name=LAN8742A_PHY_ADDRESS
@@ -117,11 +139,13 @@ Mcu.CPN=STM32F767ZIT6
 Mcu.Family=STM32F7
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M7
-Mcu.IP10=TIM3
-Mcu.IP11=USART1
-Mcu.IP12=USART2
-Mcu.IP13=USART3
-Mcu.IP14=USB_OTG_FS
+Mcu.IP10=TIM2
+Mcu.IP11=TIM3
+Mcu.IP12=USART1
+Mcu.IP13=USART2
+Mcu.IP14=USART3
+Mcu.IP15=USART6
+Mcu.IP16=USB_OTG_FS
 Mcu.IP2=DMA
 Mcu.IP3=ETH
 Mcu.IP4=I2C1
@@ -130,7 +154,7 @@ Mcu.IP6=I2C4
 Mcu.IP7=NVIC
 Mcu.IP8=RCC
 Mcu.IP9=SYS
-Mcu.IPNb=15
+Mcu.IPNb=17
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -151,46 +175,51 @@ Mcu.Pin21=PD8
 Mcu.Pin22=PD9
 Mcu.Pin23=PG6
 Mcu.Pin24=PG7
-Mcu.Pin25=PC7
-Mcu.Pin26=PC8
-Mcu.Pin27=PA8
-Mcu.Pin28=PA9
-Mcu.Pin29=PA10
+Mcu.Pin25=PC6
+Mcu.Pin26=PC7
+Mcu.Pin27=PC8
+Mcu.Pin28=PA8
+Mcu.Pin29=PA9
 Mcu.Pin3=PF0
-Mcu.Pin30=PA11
-Mcu.Pin31=PA12
-Mcu.Pin32=PA13
-Mcu.Pin33=PA14
-Mcu.Pin34=PD5
-Mcu.Pin35=PG11
-Mcu.Pin36=PG13
-Mcu.Pin37=PB3
-Mcu.Pin38=PB6
-Mcu.Pin39=PB7
+Mcu.Pin30=PA10
+Mcu.Pin31=PA11
+Mcu.Pin32=PA12
+Mcu.Pin33=PA13
+Mcu.Pin34=PA14
+Mcu.Pin35=PD5
+Mcu.Pin36=PG9
+Mcu.Pin37=PG11
+Mcu.Pin38=PG13
+Mcu.Pin39=PB3
 Mcu.Pin4=PF1
-Mcu.Pin40=PB8
-Mcu.Pin41=PB9
-Mcu.Pin42=VP_SYS_VS_Systick
-Mcu.Pin43=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin40=PB6
+Mcu.Pin41=PB7
+Mcu.Pin42=PB8
+Mcu.Pin43=PB9
+Mcu.Pin44=VP_SYS_VS_Systick
+Mcu.Pin45=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin46=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin5=PH0/OSC_IN
 Mcu.Pin6=PH1/OSC_OUT
 Mcu.Pin7=PC1
 Mcu.Pin8=PA1
 Mcu.Pin9=PA2
-Mcu.PinsNb=44
+Mcu.PinsNb=47
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
 MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream0_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream3_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream5_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream6_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream7_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream0_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream1_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream2_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream6_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -200,7 +229,10 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
-NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM2_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART3_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
+NVIC.USART6_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=RMII_REF_CLK [LAN8742A-CZ-TR_REFCLK0]
@@ -259,7 +291,7 @@ PA9.Locked=true
 PA9.Mode=Activate_VBUS
 PA9.Signal=USB_OTG_FS_VBUS
 PB0.GPIOParameters=GPIO_Speed,GPIO_Label
-PB0.GPIO_Label=LD1 [Green]
+PB0.GPIO_Label=LED_Green
 PB0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB0.Locked=true
 PB0.Signal=GPIO_Output
@@ -273,7 +305,7 @@ PB13.Locked=true
 PB13.Mode=RMII
 PB13.Signal=ETH_TXD1
 PB14.GPIOParameters=GPIO_Speed,GPIO_Label
-PB14.GPIO_Label=LD3 [Red]
+PB14.GPIO_Label=LED_Red
 PB14.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB14.Locked=true
 PB14.Signal=GPIO_Output
@@ -286,18 +318,18 @@ PB6.GPIO_Label=RADIO_RX
 PB6.Mode=Half_duplex(single_wire_mode)
 PB6.Signal=USART1_TX
 PB7.GPIOParameters=GPIO_Speed,GPIO_Label
-PB7.GPIO_Label=LD2 [Blue]
+PB7.GPIO_Label=LED_Blue
 PB7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB7.Locked=true
 PB7.Signal=GPIO_Output
 PB8.GPIOParameters=GPIO_Label,GPIO_Pu
 PB8.GPIO_Label=IMU_SCL
-PB8.GPIO_Pu=GPIO_NOPULL
+PB8.GPIO_Pu=GPIO_PULLUP
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
 PB9.GPIOParameters=GPIO_Label,GPIO_Pu
 PB9.GPIO_Label=IMU_SDA
-PB9.GPIO_Pu=GPIO_NOPULL
+PB9.GPIO_Pu=GPIO_PULLUP
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
 PC1.GPIOParameters=GPIO_Label
@@ -306,7 +338,7 @@ PC1.Locked=true
 PC1.Mode=RMII
 PC1.Signal=ETH_MDC
 PC13.GPIOParameters=GPIO_Label
-PC13.GPIO_Label=USER_Btn [B1]
+PC13.GPIO_Label=BTN_B1
 PC13.Locked=true
 PC13.Signal=GPXTI13
 PC14/OSC32_IN.Locked=true
@@ -325,6 +357,10 @@ PC5.GPIO_Label=RMII_RXD1 [LAN8742A-CZ-TR_RXD1]
 PC5.Locked=true
 PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=WLSER_TX
+PC6.Mode=Asynchronous
+PC6.Signal=USART6_TX
 PC7.GPIOParameters=GPIO_Speed,GPIO_Label
 PC7.GPIO_Label=MOTOR_3_FR
 PC7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -349,21 +385,21 @@ PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
 PF0.GPIOParameters=GPIO_Label,GPIO_Pu
 PF0.GPIO_Label=ALT_SDA
-PF0.GPIO_Pu=GPIO_NOPULL
+PF0.GPIO_Pu=GPIO_PULLUP
 PF0.Mode=I2C
 PF0.Signal=I2C2_SDA
 PF1.GPIOParameters=GPIO_Label,GPIO_Pu
 PF1.GPIO_Label=ALT_SCL
-PF1.GPIO_Pu=GPIO_NOPULL
+PF1.GPIO_Pu=GPIO_PULLUP
 PF1.Mode=I2C
 PF1.Signal=I2C2_SCL
 PF14.GPIOParameters=GPIO_Label,GPIO_Pu
-PF14.GPIO_Label=I2C4_SCL
+PF14.GPIO_Label=ToF_SCL
 PF14.GPIO_Pu=GPIO_PULLUP
 PF14.Mode=I2C
 PF14.Signal=I2C4_SCL
 PF15.GPIOParameters=GPIO_Label,GPIO_Pu
-PF15.GPIO_Label=I2C4_SDA
+PF15.GPIO_Label=ToF_SDA
 PF15.GPIO_Pu=GPIO_PULLUP
 PF15.Mode=I2C
 PF15.Signal=I2C4_SDA
@@ -385,6 +421,10 @@ PG7.GPIOParameters=GPIO_Label
 PG7.GPIO_Label=USB_OverCurrent [STMPS2151STR_FAULT]
 PG7.Locked=true
 PG7.Signal=GPIO_Input
+PG9.GPIOParameters=GPIO_Label
+PG9.GPIO_Label=WLSER_RX
+PG9.Mode=Asynchronous
+PG9.Signal=USART6_RX
 PH0/OSC_IN.GPIOParameters=GPIO_Label
 PH0/OSC_IN.GPIO_Label=MCO [STM32F103CBT6_PA8]
 PH0/OSC_IN.Locked=true
@@ -425,7 +465,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_I2C4_Init-I2C4-false-HAL-true,11-MX_TIM3_Init-TIM3-false-HAL-true,12-MX_ADC1_Init-ADC1-false-HAL-true,13-MX_USART2_UART_Init-USART2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_I2C4_Init-I2C4-false-HAL-true,11-MX_TIM3_Init-TIM3-false-HAL-true,12-MX_ADC1_Init-ADC1-false-HAL-true,13-MX_USART2_UART_Init-USART2-false-HAL-true,14-MX_USART6_UART_Init-USART6-false-HAL-true,15-MX_TIM2_Init-TIM2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -529,14 +569,17 @@ SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
 SH.S_TIM3_CH3.ConfNb=1
 SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
 SH.S_TIM3_CH4.ConfNb=1
+TIM2.IPParameters=Prescaler,Period
+TIM2.Period=1000000-1
+TIM2.Prescaler=108-1
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM3.ClockDivision=TIM_CLOCKDIVISION_DIV1
 TIM3.IPParameters=ClockDivision,Period,Prescaler,Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,Pulse-PWM Generation4 CH4
-TIM3.Period=2500
-TIM3.Prescaler=108
+TIM3.Period=2500-1
+TIM3.Prescaler=108-1
 TIM3.Pulse-PWM\ Generation1\ CH1=1000
 TIM3.Pulse-PWM\ Generation2\ CH2=1000
 TIM3.Pulse-PWM\ Generation3\ CH3=1000
@@ -549,10 +592,15 @@ USART2.VirtualMode-Half_duplex(single_wire_mode)=VM_ASYNC
 USART3.BaudRate=1500000
 USART3.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART3.VirtualMode-Asynchronous=VM_ASYNC
+USART6.IPParameters=Mode,VirtualMode-Asynchronous
+USART6.Mode=MODE_TX_RX
+USART6.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=NUCLEO-F767ZI
