--- a/Drone-Toi.ioc
+++ b/Drone-Toi.ioc
@@ -126,12 +126,12 @@ ETH.PHY_Value=0
 ETH.PhyAddress=0
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C1.I2C_Speed_Mode=I2C_Fast
+I2C1.I2C_Speed_Mode=I2C_Standard
 I2C1.IPParameters=Timing,I2C_Speed_Mode
-I2C1.Timing=0x6000030D
-I2C2.I2C_Speed_Mode=I2C_Fast
+I2C1.Timing=0x20404768
+I2C2.I2C_Speed_Mode=I2C_Standard
 I2C2.IPParameters=Timing,I2C_Speed_Mode
-I2C2.Timing=0x6000030D
+I2C2.Timing=0x20404768
 I2C4.IPParameters=Timing
 I2C4.Timing=0x20404768
 KeepUserPlacement=false
