--- a/Drone-Toi.ioc
+++ b/Drone-Toi.ioc
@@ -49,8 +49,40 @@ Dma.I2C1_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.I2C1_TX.2.PeriphInc=DMA_PINC_DISABLE
 Dma.I2C1_TX.2.Priority=DMA_PRIORITY_LOW
 Dma.I2C1_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.I2C2_RX.9.Direction=DMA_PERIPH_TO_MEMORY
+Dma.I2C2_RX.9.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.I2C2_RX.9.Instance=DMA1_Stream2
+Dma.I2C2_RX.9.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C2_RX.9.MemInc=DMA_MINC_ENABLE
+Dma.I2C2_RX.9.Mode=DMA_NORMAL
+Dma.I2C2_RX.9.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C2_RX.9.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C2_RX.9.Priority=DMA_PRIORITY_LOW
+Dma.I2C2_RX.9.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.I2C2_TX.10.Direction=DMA_MEMORY_TO_PERIPH
+Dma.I2C2_TX.10.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.I2C2_TX.10.Instance=DMA1_Stream4
+Dma.I2C2_TX.10.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C2_TX.10.MemInc=DMA_MINC_ENABLE
+Dma.I2C2_TX.10.Mode=DMA_NORMAL
+Dma.I2C2_TX.10.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C2_TX.10.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C2_TX.10.Priority=DMA_PRIORITY_LOW
+Dma.I2C2_TX.10.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.I2C4_RX.11.Direction=DMA_PERIPH_TO_MEMORY
+Dma.I2C4_RX.11.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.I2C4_RX.11.Instance=DMA1_Stream1
+Dma.I2C4_RX.11.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C4_RX.11.MemInc=DMA_MINC_ENABLE
+Dma.I2C4_RX.11.Mode=DMA_NORMAL
+Dma.I2C4_RX.11.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C4_RX.11.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C4_RX.11.Priority=DMA_PRIORITY_LOW
+Dma.I2C4_RX.11.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=USART1_RX
 Dma.Request1=I2C1_RX
+Dma.Request10=I2C2_TX
+Dma.Request11=I2C4_RX
 Dma.Request2=I2C1_TX
 Dma.Request3=ADC1
 Dma.Request4=USART2_RX
@@ -58,7 +90,8 @@ Dma.Request5=USART2_TX
 Dma.Request6=USART3_TX
 Dma.Request7=USART6_RX
 Dma.Request8=USART6_TX
-Dma.RequestsNb=9
+Dma.Request9=I2C2_RX
+Dma.RequestsNb=12
 Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART1_RX.0.Instance=DMA2_Stream2
@@ -212,7 +245,10 @@ MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream1_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream2_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream3_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream4_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream5_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream6_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream7_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
@@ -223,6 +259,12 @@ NVIC.DMA2_Stream6_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.I2C1_ER_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
+NVIC.I2C1_EV_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
+NVIC.I2C2_ER_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
+NVIC.I2C2_EV_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
+NVIC.I2C4_ER_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
+NVIC.I2C4_EV_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -230,7 +272,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.TIM2_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
-NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART2_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART3_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART6_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
