Increase WLSER UART speed

--- a/Drone-Toi.ioc
+++ b/Drone-Toi.ioc
@@ -634,7 +634,8 @@ USART2.VirtualMode-Half_duplex(single_wire_mode)=VM_ASYNC
 USART3.BaudRate=1500000
 USART3.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART3.VirtualMode-Asynchronous=VM_ASYNC
-USART6.IPParameters=Mode,VirtualMode-Asynchronous
+USART6.BaudRate=921600
+USART6.IPParameters=Mode,VirtualMode-Asynchronous,BaudRate
 USART6.Mode=MODE_TX_RX
 USART6.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
