--- a/Drone-Toi.ioc
+++ b/Drone-Toi.ioc
@@ -159,14 +159,18 @@ ETH.PHY_Value=0
 ETH.PhyAddress=0
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C1.I2C_Speed_Mode=I2C_Standard
-I2C1.IPParameters=Timing,I2C_Speed_Mode
-I2C1.Timing=0x20404768
-I2C2.I2C_Speed_Mode=I2C_Standard
-I2C2.IPParameters=Timing,I2C_Speed_Mode
-I2C2.Timing=0x20404768
-I2C4.IPParameters=Timing
-I2C4.Timing=0x20404768
+I2C1.I2C_Speed_Mode=I2C_Fast
+I2C1.IPParameters=Timing,I2C_Speed_Mode,Speed
+I2C1.Speed=400
+I2C1.Timing=0x6000030D
+I2C2.I2C_Speed_Mode=I2C_Fast
+I2C2.IPParameters=Timing,I2C_Speed_Mode,Speed
+I2C2.Speed=400
+I2C2.Timing=0x6000030D
+I2C4.I2C_Speed_Mode=I2C_Fast
+I2C4.IPParameters=Timing,I2C_Speed_Mode,Speed
+I2C4.Speed=400
+I2C4.Timing=0x6000030D
 KeepUserPlacement=false
 Mcu.CPN=STM32F767ZIT6
 Mcu.Family=STM32F7
@@ -272,6 +276,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.TIM2_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
+NVIC.USART1_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART3_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART6_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
