--- a/Drone-Toi.ioc
+++ b/Drone-Toi.ioc
@@ -16,82 +16,28 @@ CORTEX_M7.CPU_DCache=Disabled
 CORTEX_M7.CPU_ICache=Enabled
 CORTEX_M7.IPParameters=ART_ACCELERATOR_ENABLE,PREFETCH_ENABLE,CPU_ICache,CPU_DCache
 CORTEX_M7.PREFETCH_ENABLE=1
-Dma.ADC1.3.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.3.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.ADC1.3.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.ADC1.3.Instance=DMA2_Stream0
-Dma.ADC1.3.MemBurst=DMA_MBURST_SINGLE
-Dma.ADC1.3.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.ADC1.3.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.3.Mode=DMA_CIRCULAR
-Dma.ADC1.3.PeriphBurst=DMA_PBURST_SINGLE
-Dma.ADC1.3.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.ADC1.3.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.3.Priority=DMA_PRIORITY_LOW
-Dma.ADC1.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-Dma.I2C1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.I2C1_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.I2C1_RX.1.Instance=DMA1_Stream0
-Dma.I2C1_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.I2C1_RX.1.MemInc=DMA_MINC_ENABLE
-Dma.I2C1_RX.1.Mode=DMA_NORMAL
-Dma.I2C1_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.I2C1_RX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C1_RX.1.Priority=DMA_PRIORITY_LOW
-Dma.I2C1_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.I2C1_TX.2.Direction=DMA_MEMORY_TO_PERIPH
-Dma.I2C1_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.I2C1_TX.2.Instance=DMA1_Stream7
-Dma.I2C1_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.I2C1_TX.2.MemInc=DMA_MINC_ENABLE
-Dma.I2C1_TX.2.Mode=DMA_NORMAL
-Dma.I2C1_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.I2C1_TX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C1_TX.2.Priority=DMA_PRIORITY_LOW
-Dma.I2C1_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.I2C2_RX.9.Direction=DMA_PERIPH_TO_MEMORY
-Dma.I2C2_RX.9.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.I2C2_RX.9.Instance=DMA1_Stream2
-Dma.I2C2_RX.9.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.I2C2_RX.9.MemInc=DMA_MINC_ENABLE
-Dma.I2C2_RX.9.Mode=DMA_NORMAL
-Dma.I2C2_RX.9.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.I2C2_RX.9.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C2_RX.9.Priority=DMA_PRIORITY_LOW
-Dma.I2C2_RX.9.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.I2C2_TX.10.Direction=DMA_MEMORY_TO_PERIPH
-Dma.I2C2_TX.10.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.I2C2_TX.10.Instance=DMA1_Stream4
-Dma.I2C2_TX.10.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.I2C2_TX.10.MemInc=DMA_MINC_ENABLE
-Dma.I2C2_TX.10.Mode=DMA_NORMAL
-Dma.I2C2_TX.10.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.I2C2_TX.10.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C2_TX.10.Priority=DMA_PRIORITY_LOW
-Dma.I2C2_TX.10.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.I2C4_RX.11.Direction=DMA_PERIPH_TO_MEMORY
-Dma.I2C4_RX.11.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.I2C4_RX.11.Instance=DMA1_Stream1
-Dma.I2C4_RX.11.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.I2C4_RX.11.MemInc=DMA_MINC_ENABLE
-Dma.I2C4_RX.11.Mode=DMA_NORMAL
-Dma.I2C4_RX.11.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.I2C4_RX.11.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C4_RX.11.Priority=DMA_PRIORITY_LOW
-Dma.I2C4_RX.11.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.ADC1.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.1.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.ADC1.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.ADC1.1.Instance=DMA2_Stream0
+Dma.ADC1.1.MemBurst=DMA_MBURST_SINGLE
+Dma.ADC1.1.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.ADC1.1.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.1.Mode=DMA_CIRCULAR
+Dma.ADC1.1.PeriphBurst=DMA_PBURST_SINGLE
+Dma.ADC1.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.ADC1.1.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.1.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 Dma.Request0=USART1_RX
-Dma.Request1=I2C1_RX
-Dma.Request10=I2C2_TX
-Dma.Request11=I2C4_RX
-Dma.Request2=I2C1_TX
-Dma.Request3=ADC1
-Dma.Request4=USART2_RX
-Dma.Request5=USART2_TX
-Dma.Request6=USART3_TX
-Dma.Request7=USART6_RX
-Dma.Request8=USART6_TX
-Dma.Request9=I2C2_RX
-Dma.RequestsNb=12
+Dma.Request1=ADC1
+Dma.Request2=USART2_RX
+Dma.Request3=USART2_TX
+Dma.Request4=USART3_TX
+Dma.Request5=USART6_RX
+Dma.Request6=USART6_TX
+Dma.Request7=USART3_RX
+Dma.RequestsNb=8
 Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART1_RX.0.Instance=DMA2_Stream2
@@ -102,56 +48,66 @@ Dma.USART1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART1_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.USART1_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.USART1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART2_RX.4.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART2_RX.4.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART2_RX.4.Instance=DMA1_Stream5
-Dma.USART2_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_RX.4.MemInc=DMA_MINC_ENABLE
-Dma.USART2_RX.4.Mode=DMA_NORMAL
-Dma.USART2_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_RX.4.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_RX.4.Priority=DMA_PRIORITY_LOW
-Dma.USART2_RX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART2_TX.5.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART2_TX.5.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART2_TX.5.Instance=DMA1_Stream6
-Dma.USART2_TX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_TX.5.MemInc=DMA_MINC_ENABLE
-Dma.USART2_TX.5.Mode=DMA_NORMAL
-Dma.USART2_TX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_TX.5.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_TX.5.Priority=DMA_PRIORITY_LOW
-Dma.USART2_TX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART3_TX.6.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART3_TX.6.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART3_TX.6.Instance=DMA1_Stream3
-Dma.USART3_TX.6.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART3_TX.6.MemInc=DMA_MINC_ENABLE
-Dma.USART3_TX.6.Mode=DMA_NORMAL
-Dma.USART3_TX.6.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART3_TX.6.PeriphInc=DMA_PINC_DISABLE
-Dma.USART3_TX.6.Priority=DMA_PRIORITY_LOW
-Dma.USART3_TX.6.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART6_RX.7.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART6_RX.7.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART6_RX.7.Instance=DMA2_Stream1
-Dma.USART6_RX.7.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART6_RX.7.MemInc=DMA_MINC_ENABLE
-Dma.USART6_RX.7.Mode=DMA_NORMAL
-Dma.USART6_RX.7.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART6_RX.7.PeriphInc=DMA_PINC_DISABLE
-Dma.USART6_RX.7.Priority=DMA_PRIORITY_LOW
-Dma.USART6_RX.7.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART6_TX.8.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART6_TX.8.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART6_TX.8.Instance=DMA2_Stream6
-Dma.USART6_TX.8.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART6_TX.8.MemInc=DMA_MINC_ENABLE
-Dma.USART6_TX.8.Mode=DMA_NORMAL
-Dma.USART6_TX.8.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART6_TX.8.PeriphInc=DMA_PINC_DISABLE
-Dma.USART6_TX.8.Priority=DMA_PRIORITY_LOW
-Dma.USART6_TX.8.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART2_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART2_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART2_RX.2.Instance=DMA1_Stream5
+Dma.USART2_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.USART2_RX.2.Mode=DMA_NORMAL
+Dma.USART2_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_RX.2.Priority=DMA_PRIORITY_LOW
+Dma.USART2_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART2_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART2_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART2_TX.3.Instance=DMA1_Stream6
+Dma.USART2_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.USART2_TX.3.Mode=DMA_NORMAL
+Dma.USART2_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_TX.3.Priority=DMA_PRIORITY_LOW
+Dma.USART2_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART3_RX.7.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART3_RX.7.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART3_RX.7.Instance=DMA1_Stream1
+Dma.USART3_RX.7.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_RX.7.MemInc=DMA_MINC_ENABLE
+Dma.USART3_RX.7.Mode=DMA_NORMAL
+Dma.USART3_RX.7.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_RX.7.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_RX.7.Priority=DMA_PRIORITY_LOW
+Dma.USART3_RX.7.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART3_TX.4.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART3_TX.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART3_TX.4.Instance=DMA1_Stream3
+Dma.USART3_TX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_TX.4.MemInc=DMA_MINC_ENABLE
+Dma.USART3_TX.4.Mode=DMA_NORMAL
+Dma.USART3_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_TX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_TX.4.Priority=DMA_PRIORITY_LOW
+Dma.USART3_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART6_RX.5.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART6_RX.5.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART6_RX.5.Instance=DMA2_Stream1
+Dma.USART6_RX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART6_RX.5.MemInc=DMA_MINC_ENABLE
+Dma.USART6_RX.5.Mode=DMA_NORMAL
+Dma.USART6_RX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART6_RX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.USART6_RX.5.Priority=DMA_PRIORITY_LOW
+Dma.USART6_RX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART6_TX.6.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART6_TX.6.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART6_TX.6.Instance=DMA2_Stream6
+Dma.USART6_TX.6.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART6_TX.6.MemInc=DMA_MINC_ENABLE
+Dma.USART6_TX.6.Mode=DMA_NORMAL
+Dma.USART6_TX.6.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART6_TX.6.PeriphInc=DMA_PINC_DISABLE
+Dma.USART6_TX.6.Priority=DMA_PRIORITY_LOW
+Dma.USART6_TX.6.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 ETH.IPParameters=MediaInterface,PHY_Name,PHY_Value,PhyAddress
 ETH.MediaInterface=HAL_ETH_RMII_MODE
 ETH.PHY_Name=LAN8742A_PHY_ADDRESS
@@ -159,18 +115,18 @@ ETH.PHY_Value=0
 ETH.PhyAddress=0
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C1.I2C_Speed_Mode=I2C_Fast
+I2C1.I2C_Speed_Mode=I2C_Standard
 I2C1.IPParameters=Timing,I2C_Speed_Mode,Speed
-I2C1.Speed=400
-I2C1.Timing=0x6000030D
-I2C2.I2C_Speed_Mode=I2C_Fast
+I2C1.Speed=100
+I2C1.Timing=0x20404768
+I2C2.I2C_Speed_Mode=I2C_Standard
 I2C2.IPParameters=Timing,I2C_Speed_Mode,Speed
-I2C2.Speed=400
-I2C2.Timing=0x6000030D
-I2C4.I2C_Speed_Mode=I2C_Fast
+I2C2.Speed=100
+I2C2.Timing=0x20404768
+I2C4.I2C_Speed_Mode=I2C_Standard
 I2C4.IPParameters=Timing,I2C_Speed_Mode,Speed
-I2C4.Speed=400
-I2C4.Timing=0x6000030D
+I2C4.Speed=100
+I2C4.Timing=0x20404768
 KeepUserPlacement=false
 Mcu.CPN=STM32F767ZIT6
 Mcu.Family=STM32F7
@@ -248,14 +204,10 @@ Mcu.UserName=STM32F767ZITx
 MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-NVIC.DMA1_Stream0_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream1_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream2_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream3_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream4_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream5_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream6_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream7_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream0_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream1_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream2_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
@@ -263,12 +215,6 @@ NVIC.DMA2_Stream6_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-NVIC.I2C1_ER_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
-NVIC.I2C1_EV_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
-NVIC.I2C2_ER_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
-NVIC.I2C2_EV_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
-NVIC.I2C4_ER_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
-NVIC.I2C4_EV_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -339,7 +285,7 @@ PA9.Mode=Activate_VBUS
 PA9.Signal=USB_OTG_FS_VBUS
 PB0.GPIOParameters=GPIO_Speed,GPIO_Label
 PB0.GPIO_Label=LED_Green
-PB0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB0.Locked=true
 PB0.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Speed,GPIO_Label
@@ -353,7 +299,7 @@ PB13.Mode=RMII
 PB13.Signal=ETH_TXD1
 PB14.GPIOParameters=GPIO_Speed,GPIO_Label
 PB14.GPIO_Label=LED_Red
-PB14.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB14.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB14.Locked=true
 PB14.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
@@ -366,7 +312,7 @@ PB6.Mode=Half_duplex(single_wire_mode)
 PB6.Signal=USART1_TX
 PB7.GPIOParameters=GPIO_Speed,GPIO_Label
 PB7.GPIO_Label=LED_Blue
-PB7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB7.Locked=true
 PB7.Signal=GPIO_Output
 PB8.GPIOParameters=GPIO_Label,GPIO_Pu
