Enable ART accelerator

--- a/Drone-Toi.ioc
+++ b/Drone-Toi.ioc
@@ -11,10 +11,11 @@ ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-CORTEX_M7.ART_ACCELERATOR_ENABLE=0
+CORTEX_M7.ART_ACCELERATOR_ENABLE=1
 CORTEX_M7.CPU_DCache=Disabled
 CORTEX_M7.CPU_ICache=Enabled
-CORTEX_M7.IPParameters=ART_ACCELERATOR_ENABLE,PREFETCH_ENABLE,CPU_ICache,CPU_DCache
+CORTEX_M7.FlashInterface=TCM_Enabled
+CORTEX_M7.IPParameters=ART_ACCELERATOR_ENABLE,PREFETCH_ENABLE,CPU_ICache,CPU_DCache,FlashInterface
 CORTEX_M7.PREFETCH_ENABLE=1
 Dma.ADC1.1.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.1.FIFOMode=DMA_FIFOMODE_ENABLE
