Lower GPIO max output speed to reduce supply noise and EMI

--- a/Drone-Toi.ioc
+++ b/Drone-Toi.ioc
@@ -267,7 +267,7 @@ PA3.GPIO_Label=BATT_Voltage
 PA3.Signal=ADCx_IN3
 PA6.GPIOParameters=GPIO_Speed,GPIO_Label
 PA6.GPIO_Label=MOTOR_1_FL
-PA6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PA6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA6.Signal=S_TIM3_CH1
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=RMII_CRS_DV [LAN8742A-CZ-TR_CRS_DV]
@@ -291,7 +291,7 @@ PB0.Locked=true
 PB0.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Speed,GPIO_Label
 PB1.GPIO_Label=MOTOR_2_RR
-PB1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB1.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB1.Signal=S_TIM3_CH4
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=RMII_TXD1 [LAN8742A-CZ-TR_TXD1]
@@ -307,8 +307,9 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
-PB6.GPIOParameters=GPIO_Label
+PB6.GPIOParameters=GPIO_Speed,GPIO_Label
 PB6.GPIO_Label=RADIO_RX
+PB6.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB6.Mode=Half_duplex(single_wire_mode)
 PB6.Signal=USART1_TX
 PB7.GPIOParameters=GPIO_Speed,GPIO_Label
@@ -316,14 +317,16 @@ PB7.GPIO_Label=LED_Blue
 PB7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB7.Locked=true
 PB7.Signal=GPIO_Output
-PB8.GPIOParameters=GPIO_Label,GPIO_Pu
+PB8.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_Pu
 PB8.GPIO_Label=IMU_SCL
 PB8.GPIO_Pu=GPIO_PULLUP
+PB8.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
-PB9.GPIOParameters=GPIO_Label,GPIO_Pu
+PB9.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_Pu
 PB9.GPIO_Label=IMU_SDA
 PB9.GPIO_Pu=GPIO_PULLUP
+PB9.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
 PC1.GPIOParameters=GPIO_Label
@@ -351,50 +354,58 @@ PC5.GPIO_Label=RMII_RXD1 [LAN8742A-CZ-TR_RXD1]
 PC5.Locked=true
 PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
-PC6.GPIOParameters=GPIO_Label
+PC6.GPIOParameters=GPIO_Speed,GPIO_Label
 PC6.GPIO_Label=WLSER_TX
+PC6.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PC6.Mode=Asynchronous
 PC6.Signal=USART6_TX
 PC7.GPIOParameters=GPIO_Speed,GPIO_Label
 PC7.GPIO_Label=MOTOR_3_FR
-PC7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PC7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC7.Signal=S_TIM3_CH2
 PC8.GPIOParameters=GPIO_Speed,GPIO_Label
 PC8.GPIO_Label=MOTOR_4_RL
-PC8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PC8.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC8.Signal=S_TIM3_CH3
-PD5.GPIOParameters=GPIO_Label
+PD5.GPIOParameters=GPIO_Speed,GPIO_Label
 PD5.GPIO_Label=RADIO_Telemetry
+PD5.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PD5.Mode=Half_duplex(single_wire_mode)
 PD5.Signal=USART2_TX
-PD8.GPIOParameters=GPIO_Label
+PD8.GPIOParameters=GPIO_Speed,GPIO_Label
 PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
+PD8.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PD8.Locked=true
 PD8.Mode=Asynchronous
 PD8.Signal=USART3_TX
-PD9.GPIOParameters=GPIO_Label
+PD9.GPIOParameters=GPIO_Speed,GPIO_Label
 PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
+PD9.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
-PF0.GPIOParameters=GPIO_Label,GPIO_Pu
+PF0.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_Pu
 PF0.GPIO_Label=ALT_SDA
 PF0.GPIO_Pu=GPIO_PULLUP
+PF0.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PF0.Mode=I2C
 PF0.Signal=I2C2_SDA
-PF1.GPIOParameters=GPIO_Label,GPIO_Pu
+PF1.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_Pu
 PF1.GPIO_Label=ALT_SCL
 PF1.GPIO_Pu=GPIO_PULLUP
+PF1.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PF1.Mode=I2C
 PF1.Signal=I2C2_SCL
-PF14.GPIOParameters=GPIO_Label,GPIO_Pu
+PF14.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_Pu
 PF14.GPIO_Label=ToF_SCL
 PF14.GPIO_Pu=GPIO_PULLUP
+PF14.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PF14.Mode=I2C
 PF14.Signal=I2C4_SCL
-PF15.GPIOParameters=GPIO_Label,GPIO_Pu
+PF15.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_Pu
 PF15.GPIO_Label=ToF_SDA
 PF15.GPIO_Pu=GPIO_PULLUP
+PF15.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PF15.Mode=I2C
 PF15.Signal=I2C4_SDA
 PG11.GPIOParameters=GPIO_Label
@@ -415,8 +426,9 @@ PG7.GPIOParameters=GPIO_Label
 PG7.GPIO_Label=USB_OverCurrent [STMPS2151STR_FAULT]
 PG7.Locked=true
 PG7.Signal=GPIO_Input
-PG9.GPIOParameters=GPIO_Label
+PG9.GPIOParameters=GPIO_Speed,GPIO_Label
 PG9.GPIO_Label=WLSER_RX
+PG9.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PG9.Mode=Asynchronous
 PG9.Signal=USART6_RX
 PH0/OSC_IN.GPIOParameters=GPIO_Label
