--- a/Drone-Toi.ioc
+++ b/Drone-Toi.ioc
@@ -576,7 +576,7 @@ SH.S_TIM3_CH3.ConfNb=1
 SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
 SH.S_TIM3_CH4.ConfNb=1
 TIM2.IPParameters=Prescaler,Period
-TIM2.Period=1000000-1
+TIM2.Period=2147483647
 TIM2.Prescaler=108-1
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
@@ -598,7 +598,7 @@ USART2.VirtualMode-Half_duplex(single_wire_mode)=VM_ASYNC
 USART3.BaudRate=1500000
 USART3.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART3.VirtualMode-Asynchronous=VM_ASYNC
-USART6.BaudRate=921600
+USART6.BaudRate=460800
 USART6.IPParameters=Mode,VirtualMode-Asynchronous,BaudRate
 USART6.Mode=MODE_TX_RX
 USART6.VirtualMode-Asynchronous=VM_ASYNC
