Adjustments for new hardware

--- a/Drone-Toi.ioc
+++ b/Drone-Toi.ioc
@@ -267,7 +267,7 @@ PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=BATT_Voltage
 PA3.Signal=ADCx_IN3
 PA6.GPIOParameters=GPIO_Speed,GPIO_Label
-PA6.GPIO_Label=MOTOR_1_FL
+PA6.GPIO_Label=MOTOR_2_RR
 PA6.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA6.Signal=S_TIM3_CH1
 PA7.GPIOParameters=GPIO_Label
@@ -291,7 +291,7 @@ PB0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB0.Locked=true
 PB0.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Speed,GPIO_Label
-PB1.GPIO_Label=MOTOR_2_RR
+PB1.GPIO_Label=MOTOR_1_FL
 PB1.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB1.Signal=S_TIM3_CH4
 PB13.GPIOParameters=GPIO_Label
@@ -361,11 +361,11 @@ PC6.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PC6.Mode=Asynchronous
 PC6.Signal=USART6_TX
 PC7.GPIOParameters=GPIO_Speed,GPIO_Label
-PC7.GPIO_Label=MOTOR_3_FR
+PC7.GPIO_Label=MOTOR_4_RL
 PC7.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PC7.Signal=S_TIM3_CH2
 PC8.GPIOParameters=GPIO_Speed,GPIO_Label
-PC8.GPIO_Label=MOTOR_4_RL
+PC8.GPIO_Label=MOTOR_3_FR
 PC8.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PC8.Signal=S_TIM3_CH3
 PD5.GPIOParameters=GPIO_Speed,GPIO_Label
